  Added new Refactorings (All new refactoring dialogs are now closeable with the ESCAPE key):
    - Rename Table
    - Add/Rename/Drop View
    - Add/Modify/Drop Sequence
    - Add/Drop Index
    - Add/Drop Foreign Key
    - Add/Drop Unique Constraint
    - Add Lookup Table
    - Add Auto Increment
    - Merge Column
    - Merge Table

Bug-Fixes:




1861402 (Informix catalog switching doesn't work correctly) 
 - Better catalog switching behavior for databases that support catalogs.  Now if a connection is made 
   without specifying the catalog, a place-holder
   catalog ("None") is inserted into the catalog drop-down menu and removed once a catalog is selected.  
 - Fixed a race condition that caused the tree to be refreshed before data was refreshed from the database 
   when the catalog was switched.  
 - For Informix, setCatalog seems to have no effect, so now an explicit DATABASE <catalogname> command is 
   issued. 

1769599 fix for permission problem with Windows Vista.  Now we create our temporary path file in a temporary 
location that the user should always be able to write to.  Thanks to user aberdeen61 for contributing the 
fix. 

1596240: Fixed bug when displaying HSQLDB->Objects->Content, where contents are not shown and exceptions are 
thrown because tables are not being qualified with the schema name.

DBCopy Plugin:
 - Only attempt to order the tables being copied if there is more than one table in the copy set.

Derby Plugin:
1541325: Connection doesn't close when ending session - thanks goes to 
         Alex Pivovarov for the patch that fixed the issue.

1848924: Sybase object browser contents not displayed

Changing to another window using Alt + left/right arrow did not properly set focus.

Hibernate Plugin: 
 - Class names in completion list could change from fully qualified to simple
   while scrolling through the completion list.
 - When a statement like "from Kv k where k." was completed the 